# token-saver

./: .gitignore  CLAUDE.md  COMPRESSORS.md  Cargo.toml  LICENSE  README.md
.claude/: settings.json
.claude/skills/verify/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-03-22-token-saver.md  2026-03-26-git-log-compressor.md
docs/superpowers/specs/: 2026-03-22-token-saver-design.md  2026-03-26-git-log-compressor-design.md
scripts/: compare.sh  install.sh  uninstall.sh  update-tap.sh
src/: init.rs  main.rs  runner.rs  uninstall.rs
src/compressors/: filters.rs  mod.rs  report.rs  tree.rs
src/compressors/cat/: mod.rs
src/compressors/eslint/: mod.rs
src/compressors/find/: mod.rs
src/compressors/git/: branch.rs  commit_parser.rs  diff.rs  diff_parser.rs  log.rs  mod.rs  show.rs  status.rs
src/compressors/grep/: mod.rs
src/compressors/jest/: mod.rs
src/compressors/ls/: mod.rs
src/compressors/npx/: mod.rs
src/compressors/prettier/: mod.rs
src/compressors/tsc/: mod.rs
tests/: cat.rs  compare.rs  eslint.rs  find.rs  git_branch.rs  git_diff.rs  git_log.rs  git_show.rs  git_status.rs  grep.rs  jest.rs  ls.rs  npx_prettier.rs  npx_tsc.rs  passthrough.rs  prettier.rs  tsc.rs
tests/common/: cat.rs  eslint.rs  find.rs  git_branch.rs  git_diff.rs  git_log.rs  git_show.rs  git_status.rs  grep.rs  jest.rs  ls.rs  mod.rs  prettier.rs  tsc.rs
